--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -168,7 +168,7 @@
         </div>
     </section>
 
-    <!-- Breadcrumbs -->
+    <!-- Title/Breadcrumbs -->
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
             <div class="page-header-section">
@@ -177,7 +177,7 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="index.html">
+                                    <a href="../index.html">
                                         <i class="fa-solid fa-house"></i>
                                     </a>
                                 </li>
@@ -192,28 +192,24 @@
                                 <div>
                                     <h1 class="page-title" id="filter-title">Bus Arrival Timings</h1>
                                 </div>
-                                <div style="position: relative; max-width: 400px; margin-top: 5px;">
-                                    <i class="fa-solid fa-search"
-                                        style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
-                                    <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder=" Search for a Bus Stop" style="padding-left: 35px; width: 100%;">
-                                </div>
                             </div>
                         </div>
                     </div>
 
-                                    <div class="scrollable-tabs-container">
+                </div>
+
+
+                <div class="scrollable-tabs-container">
                     <div class="left-arrow">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
                         </svg>
-
                     </div>
 
                     <ul>
                         <li>
-                            <a href="bat-2.html">Nearby Bus Stops</a>
+                            <a href="nbs.html">Nearby Bus Stops</a>
                         </li>
 
                         <li>
@@ -229,41 +225,17 @@
 
                     </div>
                 </div>
-
-                </div>
                 <hr>
             </div>
 
         </div>
 
     </section>
-
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
-        <div class="container">
-            <div class="fleet-legend">
-                <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
-                <span><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
-                <span><img src="assets/sd.png" alt="Other Icon" class="fleet-icon"> Single</span>
-            </div>
 
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col" class="svc-spacing">Services</th>
-                        <th scope="col" class="departure-spacing">Departure Times</th>
-                        <th class="operator-column" scope="col">Operator</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            <span class="bus-time"></span>
-                            <span class="bus-time"></span>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="container container-xxl">
+            <div id="bus-stops"></div>
         </div>
     </section>
 
@@ -316,103 +288,96 @@
     <script src="../js/dstabs.js"></script>
 
     <script>
-        // Fetch data from the backend API
-        async function fetchBusArrivals() {
-            try {
-                const searchInput = document.getElementById('bus-stop-search').value.trim();
-                const tableBody = document.querySelector('table tbody');
+        const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/nearby-bus-stops'; // Update with your server URL
 
-                // If no input, show a message and stop further execution
-                if (!searchInput) {
-                    tableBody.innerHTML = '<tr class="message"><td colspan="4">Enter Bus Stop Code</td></tr>';
-                    return;
-                }
-
-                const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
-
-                // Append query parameters
-                url.searchParams.append('BusStopCode', searchInput);
-
-                const response = await fetch(url);
-
-                if (!response.ok) {
-                    throw new Error('Failed to fetch bus arrivals');
-                }
-
-                const data = await response.json();
-                console.log('API Response:', data); // Debugging log
-
-                tableBody.innerHTML = ''; // Clear existing rows
-
-                if (!data.Services || data.Services.length === 0) {
-                    tableBody.innerHTML = '<tr><td colspan="4">No data available</td></tr>';
-                    return;
-                }
-
-                data.Services.forEach((service) => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                    <td class="svcNumtd">
-                        <p class="svcNum">${service.ServiceNo}</p>
-                    </td>
-                    <td class="departure-spacing">
-                        <span class="bus-time">${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : '-'} &nbsp; ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}</span>
-                        <span class="bus-time">${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : ''} &nbsp; ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}</span>
-                    </td>
-                    <td> 
-                        ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}</td>
-                `;
-                    tableBody.appendChild(row);
-                });
-            } catch (error) {
-                console.error('Error fetching bus arrivals:', error);
-                const tableBody = document.querySelector('table tbody');
-                tableBody.innerHTML = '<tr><td colspan="4">Error loading data</td></tr>';
-            }
-        }
-
-        // Save the search input value to localStorage
-        document.getElementById('bus-stop-search').addEventListener('input', (event) => {
-            localStorage.setItem('busStopSearch', event.target.value);
-            fetchBusArrivals();
-        });
-
-        // Restore the search input value from localStorage on page load
+        // Automatically fetch nearby bus stops on page load
         document.addEventListener('DOMContentLoaded', () => {
-            const savedSearch = localStorage.getItem('busStopSearch');
-            const tableBody = document.querySelector('table tbody');
+            const busStopsContainer = document.getElementById('bus-stops');
 
-            if (savedSearch) {
-                document.getElementById('bus-stop-search').value = savedSearch;
-                fetchBusArrivals(); // Fetch data for the saved search value
-            } else {
-                // Show "Enter Bus Stop Code" message if no saved search value
-                tableBody.innerHTML = '<tr class="message"><td colspan="4">Enter Bus Stop Code</td></tr>';
+            // Display "Searching for nearby bus stops..." message
+            busStopsContainer.innerHTML = '<p>Searching for nearby bus stops...</p>';
+
+            // Check if geolocation is available
+            if (!navigator.geolocation) {
+                alert('Geolocation is not supported by your browser.');
+                busStopsContainer.innerHTML = '<p>Geolocation is not supported by your browser.</p>';
+                return;
             }
+
+            // Get the user's current location
+            navigator.geolocation.getCurrentPosition(async (position) => {
+                const latitude = position.coords.latitude;
+                const longitude = position.coords.longitude;
+
+                try {
+                    // Fetch nearby bus stops from the backend
+                    const response = await fetch(`${apiUrl}?latitude=${latitude}&longitude=${longitude}&radius=2`);
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch nearby bus stops');
+                    }
+
+                    const busStops = await response.json();
+                    displayBusStops(busStops);
+                } catch (error) {
+                    console.error('Error:', error);
+                    busStopsContainer.innerHTML = '<p>Failed to fetch nearby bus stops. Please try again later.</p>';
+                }
+            }, (error) => {
+                console.error('Geolocation error:', error);
+                busStopsContainer.innerHTML = '<p>Unable to retrieve your location.</p>';
+            });
         });
 
-        // Refresh data every 30 seconds
-        setInterval(fetchBusArrivals, 30000);
+        // Display the 3 nearest bus stops
+        function displayBusStops(busStops) {
+            const busStopsContainer = document.getElementById('bus-stops');
+            busStopsContainer.innerHTML = ''; // Clear previous results
 
-        // Function to format ISO string to hh:mm and show "Arr" if the time matches the current time
-        function formatArrivalTime(isoString) {
-            const date = new Date(isoString);
-            const hours = date.getHours().toString().padStart(2, '0'); // Ensure 2-digit format
-            const minutes = date.getMinutes().toString().padStart(2, '0'); // Ensure 2-digit format
-            const formattedTime = `${hours}:${minutes}`;
-
-            // Get the current time in hh:mm format
-            const now = new Date();
-            const currentHours = now.getHours().toString().padStart(2, '0');
-            const currentMinutes = now.getMinutes().toString().padStart(2, '0');
-            const currentTime = `${currentHours}:${currentMinutes}`;
-
-            // Compare the times and return "Arr" if they match
-            if (formattedTime === currentTime) {
-                return `<span class="arrival-now">Arr</span>`;
+            if (!busStops || busStops.length === 0) {
+                busStopsContainer.innerHTML = '<p>No bus stops found nearby.</p>';
+                return;
             }
-            return formattedTime;
+
+            busStops.forEach((busStop, index) => {
+                const distance = busStop.distance < 1
+                    ? `${(busStop.distance * 1000).toFixed(0)} m` // Convert to meters if less than 1 km
+                    : `${busStop.distance.toFixed(2)} km`; // Show in kilometers otherwise
+
+                const busStopElement = document.createElement('div');
+                busStopElement.className = 'bus-stop';
+                busStopElement.innerHTML = `
+        <strong>Bus Stop Code:</strong> 
+        <span class="bus-stop-code" style="color: blue; cursor: pointer;" data-code="${busStop.BusStopCode}" data-description="${busStop.Description}">
+            ${busStop.BusStopCode}
+        </span><br>
+        <strong>Description:</strong> ${busStop.Description}<br>
+        <strong>Road Name:</strong> ${busStop.RoadName}<br>
+        <strong>Distance:</strong> ${distance}
+    `;
+                busStopsContainer.appendChild(busStopElement);
+            });
+
+            // Add click event listeners to bus stop codes
+            document.querySelectorAll('.bus-stop-code').forEach((element) => {
+                element.addEventListener('click', (event) => {
+                    const busStopCode = event.target.getAttribute('data-code');
+                    const description = event.target.getAttribute('data-description');
+                    // Navigate to bat.html with the bus stop code and description as query parameters
+                    window.location.href = `bat.html?BusStopCode=${encodeURIComponent(busStopCode)}&Description=${encodeURIComponent(description)}`;
+                });
+            });
         }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const searchBusStopButton = document.querySelector('a[href="bat.html"]'); // Select the "Search Bus Stop" button
+            const searchInput = document.getElementById('bus-stop-search'); // Select the search input field
+
+            if (searchBusStopButton && searchInput) {
+                searchBusStopButton.addEventListener('click', () => {
+                    searchInput.value = ''; // Clear the search bar
+                });
+            }
+        });
     </script>
 
 </body>
