2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/bat/bat.html
+++ b/bat/bat.html
@@ -182,7 +182,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="#">Works By NRFZ</a>
+                                    <a href="#">Bus Arrival Timings</a>
                                 </li>
                             </ol>
                         </nav>
@@ -190,7 +190,7 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Bus Arrival Timings</h1>
+                                    <h1 class="page-title" id="filter-title">Search Bus Stop</h1>
                                 </div>
                                 <div style="position: relative; max-width: 400px; margin-top: 5px;">
                                     <i class="fa-solid fa-search"
@@ -220,7 +220,7 @@
                         </li>
 
                         <li>
-                            <a href="bat.html" id="search-bus-stop-button">Search Bus Stop</a>
+                            <a href="bat.html" id="search-bus-stop-button" class="active">Search Bus Stop</a>
                         </li>
                     </ul>
 
