--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -182,7 +182,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="#">Works By NRFZ</a>
+                                    <a href="#">Bus Arrival Timings</a>
                                 </li>
                             </ol>
                         </nav>
@@ -190,7 +190,7 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Bus Arrival Timings</h1>
+                                    <h1 class="page-title" id="filter-title">Nearby Bus Stops</h1>
                                 </div>
                             </div>
                         </div>
@@ -209,11 +209,11 @@
 
                     <ul>
                         <li>
-                            <a href="nbs.html">Nearby Bus Stops</a>
+                            <a href="nbs.html" class="active">Nearby Bus Stops</a>
                         </li>
 
                         <li>
-                            <a href="bat.html">Search Bus Stop</a>
+                            <a href="bat.html" id="search-bus-stop-button">Search Bus Stop</a>
                         </li>
                     </ul>
 
@@ -347,7 +347,7 @@
                 busStopElement.className = 'bus-stop';
                 busStopElement.innerHTML = `
         <strong>Bus Stop Code:</strong> 
-        <span class="bus-stop-code" style="color: blue; cursor: pointer;" data-code="${busStop.BusStopCode}" data-description="${busStop.Description}">
+        <span class="bus-stop-code" data-code="${busStop.BusStopCode}" data-description="${busStop.Description}">
             ${busStop.BusStopCode}
         </span><br>
         <strong>Description:</strong> ${busStop.Description}<br>
