--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -33,7 +33,7 @@
 </head>
 
 <style>
-    #cv-about {
+    #cv-bat {
         background-image: url("../img/bg-img/hero-bg-small.png");
         height: 34vh;
     }
@@ -159,7 +159,7 @@
     <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
     <!-- Cover Header -->
-    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-about">
+    <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-bat">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
