--- a/bat/bat.html
+++ b/bat/bat.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>BAT | Blog</title>
+    <title>Search Bus Stop | BAT</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -36,6 +36,10 @@
     #cv-bat {
         background-image: url("../img/bg-img/hero-bg-small.png");
         height: 34vh;
+    }
+
+    .footer {
+        display: none;
     }
 </style>
 
@@ -321,49 +325,21 @@
             return urlParams.get(param);
         }
 
-        // Populate the search bar with the BusStopCode from the query parameter
-        document.addEventListener('DOMContentLoaded', () => {
-            const busStopCode = getQueryParam('BusStopCode');
-            const searchInput = document.getElementById('bus-stop-search');
-            const tableBody = document.querySelector('table tbody');
-
-            if (busStopCode) {
-                searchInput.value = busStopCode; // Set the search bar value
-                sessionStorage.setItem('busStopSearch', busStopCode); // Save to sessionStorage
-                fetchBusArrivals(); // Trigger the search
-
-                // Remove the query parameters from the URL after loading
-                const url = new URL(window.location.href);
-                url.searchParams.delete('BusStopCode');
-                window.history.replaceState({}, document.title, url.pathname);
-            } else {
-                // Restore the search input value from sessionStorage on page load
-                const savedSearch = sessionStorage.getItem('busStopSearch');
-                if (savedSearch) {
-                    searchInput.value = savedSearch;
-                    fetchBusArrivals(); // Fetch data for the saved search value
-                } else {
-                    // Show "Enter Bus Stop Code" message if no value is present
-                    tableBody.innerHTML = '<tr class="message"><td colspan="4">Enter Bus Stop Code</td></tr>';
-                }
-            }
-        });
-
         // Fetch data from the backend API
         async function fetchBusArrivals() {
             try {
                 const searchInput = document.getElementById('bus-stop-search').value.trim();
                 const tableBody = document.querySelector('table tbody');
+                const footer = document.querySelector('.footer'); // Select the footer
 
-                // If no input, show a message and stop further execution
+                // If no input, show a message, hide the footer, and stop further execution
                 if (!searchInput) {
                     tableBody.innerHTML = '<tr class="message"><td colspan="4">Enter Bus Stop Code</td></tr>';
+                    footer.style.display = 'none'; // Hide footer if search bar is empty
                     return;
                 }
 
                 const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
-
-                // Append query parameters
                 url.searchParams.append('BusStopCode', searchInput);
 
                 const response = await fetch(url);
@@ -373,36 +349,55 @@
                 }
 
                 const data = await response.json();
-                console.log('API Response:', data); // Debugging log
+                console.log('API Response:', data);
 
-                tableBody.innerHTML = ''; // Clear existing rows
+                tableBody.innerHTML = '';
 
                 if (!data.Services || data.Services.length === 0) {
                     tableBody.innerHTML = '<tr><td colspan="4">No data available</td></tr>';
+                    footer.style.display = 'block';
                     return;
                 }
 
                 data.Services.forEach((service) => {
                     const row = document.createElement('tr');
                     row.innerHTML = `
-            <td class="svcNumtd">
-                <p class="svcNum">${service.ServiceNo}</p>
-            </td>
-            <td class="departure-spacing">
-                <span class="bus-time">${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : '-'} &nbsp; ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}</span>
-                <span class="bus-time">${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : ''} &nbsp; ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}</span>
-            </td>
-            <td> 
-                ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}</td>
-        `;
+                    <td class="svcNumtd">
+                        <p class="svcNum">${service.ServiceNo}</p>
+                    </td>
+                    <td class="departure-spacing">
+                        <span class="bus-time">${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : '-'} &nbsp; ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}</span>
+                        <span class="bus-time">${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : ''} &nbsp; ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}</span>
+                    </td>
+                    <td> 
+                        ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}</td>
+                `;
                     tableBody.appendChild(row);
                 });
+
+                footer.style.display = 'block';
             } catch (error) {
                 console.error('Error fetching bus arrivals:', error);
                 const tableBody = document.querySelector('table tbody');
+                const footer = document.querySelector('.footer');
                 tableBody.innerHTML = '<tr><td colspan="4">Error loading data</td></tr>';
+                footer.style.display = 'block';
             }
         }
+
+        // Add event listener for search bar input
+        document.addEventListener('DOMContentLoaded', () => {
+            const searchInput = document.getElementById('bus-stop-search');
+            const footer = document.querySelector('.footer');
+
+            // Hide footer when search bar is cleared
+            searchInput.addEventListener('input', () => {
+                if (!searchInput.value.trim()) {
+                    footer.style.display = 'none';
+                }
+            });
+        });
+
         // Refresh data every 30 seconds
         setInterval(fetchBusArrivals, 30000);
 
