2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/bat/bat.html
+++ b/bat/bat.html
@@ -150,7 +150,7 @@
                 </a>
             </li>
             <li class="mobile-menu-item">
-                <a href="../blog.html" class="mobile-menu-link active">
+                <a href="../blog.html" class="mobile-menu-link">
                     <i class="fa-solid fa-comment"></i>
                     <span>Blog</span>
                 </a>
