Intro new All Bus Stops API

--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -219,6 +219,10 @@
                         <li>
                             <a href="bat.html" id="search-bus-stop-button">Search Bus Stop</a>
                         </li>
+
+                                                <li>
+                            <a href="abs.html">Bus Stops</a>
+                        </li>
                     </ul>
 
                     <div class="right-arrow active">
