--- a/bat/abs.html
+++ b/bat/abs.html
@@ -224,11 +224,11 @@
                         </li>
 
                         <li>
-                            <a href="bat.html" id="search-bus-stop-button" class="active">Search Bus Stop</a>
+                            <a href="bat.html" id="search-bus-stop-button">Search Bus Stop</a>
                         </li>
 
                         <li>
-                            <a href="abs.html">Bus Stops</a>
+                            <a href="abs.html" class="active">Bus Stops</a>
                         </li>
                     </ul>
 
@@ -250,26 +250,10 @@
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
-            <div class="fleet-legend">
-                <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
-                <span><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
-                <span><img src="assets/sd.png" alt="Other Icon" class="fleet-icon"> Single</span>
-            </div>
 
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col" class="svc-spacing">Services</th>
-                        <th scope="col" class="departure-spacing">Departure Times</th>
-                        <th class="operator-column" scope="col">Operator</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="message">
-                        <td colspan="3">Loading Data...</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="list-group">
+                <p> Fetching Bus Stops List...</p>
+            </div>
 
         </div>
     </section>
@@ -323,200 +307,102 @@
     <script src="../js/dstabs.js"></script>
 
     <script>
-        // Function to get query parameters from the URL
-        function getQueryParam(param) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
+        document.addEventListener('DOMContentLoaded', async () => {
+            const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops'; // API URL
+            const listGroup = document.querySelector('.list-group'); // Select the existing list-group container
+            const paginationContainer = document.createElement('div'); // Create a container for pagination
+            paginationContainer.className = 'pagination-container';
+            listGroup.parentNode.appendChild(paginationContainer); // Append pagination below the list group
 
-        // Fetch data from the backend API
-        async function fetchBusArrivals() {
-            try {
-                const searchInput = document.getElementById('bus-stop-search').value.trim();
-                const tableBody = document.querySelector('table tbody');
-                const footer = document.querySelector('.footer'); // Select the footer
+            let skip = 0; // Start with the first 500 items
+            const limit = 500; // Number of items per page
 
-                // If no input, show a message, hide the footer, and stop further execution
-                if (!searchInput) {
-                    tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code</td></tr>';
-                    footer.style.display = 'none'; // Hide footer if search bar is empty
-                    return;
+            // Function to fetch bus stops
+            async function fetchBusStops(skip) {
+                try {
+                    const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${limit}`, {
+                        method: 'GET',
+                        headers: {
+                            accept: 'application/json',
+                        },
+                    });
+
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch bus stops');
+                    }
+
+                    const data = await response.json();
+
+                    // Clear the existing list-group content
+                    listGroup.innerHTML = '';
+
+                    // Iterate through the bus stops and create list-group-item elements
+                    data.value.forEach((busStop) => {
+                        const listItem = document.createElement('a');
+                        listItem.href = '#'; // Add a link if needed
+                        listItem.className = 'list-group-item list-group-item-action bus-stop-code';
+                        listItem.setAttribute('data-code', busStop.BusStopCode); // Add bus stop code as a data attribute
+                        listItem.setAttribute('data-description', busStop.Description); // Add description as a data attribute
+                        listItem.textContent = `${busStop.BusStopCode} - ${busStop.Description} (${busStop.RoadName})`;
+                        listGroup.appendChild(listItem);
+                    });
+
+                    // Add click event listeners to the dynamically created bus stop codes
+                    addClickListeners();
+
+                    // Update pagination controls
+                    updatePagination(skip, data.value.length);
+                } catch (error) {
+                    console.error('Error fetching bus stops:', error);
+                    listGroup.innerHTML = '<a href="#" class="list-group-item list-group-item-action">Error loading bus stops</a>';
                 }
-
-                const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
-                url.searchParams.append('BusStopCode', searchInput);
-
-                const response = await fetch(url);
-
-                if (!response.ok) {
-                    throw new Error('Failed to fetch bus arrivals');
-                }
-
-                const data = await response.json();
-                console.log('API Response:', data);
-
-                tableBody.innerHTML = '';
-
-                if (!data.Services || data.Services.length === 0) {
-                    tableBody.innerHTML = '<tr><td colspan="3">No data available</td></tr>';
-                    footer.style.display = 'block';
-                    return;
-                }
-
-                data.Services.forEach((service) => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                <td class="svcNumtd">
-                    <p class="svcNum">${service.ServiceNo}</p>
-                </td>
-                <td class="departure-spacing">
-                    <span class="bus-time">
-                        ${service.NextBus.EstimatedArrival ? formatArrivalTime(service.NextBus.EstimatedArrival) : '-'} 
-                        &nbsp; 
-                        ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}
-                    </span>
-                    <span class="bus-time">
-                        ${service.NextBus2.EstimatedArrival ? formatArrivalTime(service.NextBus2.EstimatedArrival) : ''} 
-                        &nbsp; 
-                        ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 30px; height: auto;">` : ''}
-                    </span>
-                </td>
-                <td> 
-                    ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}
-                </td>
-            `;
-                    tableBody.appendChild(row);
-                });
-
-            } catch (error) {
-                console.error('Error fetching bus arrivals:', error);
-                const tableBody = document.querySelector('table tbody');
-                const footer = document.querySelector('.footer');
-                tableBody.innerHTML = '<tr><td colspan="3">Error loading data</td></tr>';
-                footer.style.display = 'block';
             }
-        }
 
-        // Add event listener for search bar input
-document.addEventListener('DOMContentLoaded', () => {
-    const searchInput = document.getElementById('bus-stop-search'); // Search input field
-    const tableBody = document.querySelector('table tbody'); // Table body
-    const footer = document.querySelector('.footer'); // Footer
-
-    // Function to get query parameters from the URL
-    function getQueryParam(param) {
-        const urlParams = new URLSearchParams(window.location.search);
-        return urlParams.get(param);
-    }
-
-    // Get BusStopCode and Description from the URL
-    const busStopCode = getQueryParam('BusStopCode');
-    const description = getQueryParam('Description');
-
-    if (busStopCode) {
-        // If BusStopCode exists in the URL, set it in the search bar and sessionStorage
-        searchInput.value = busStopCode;
-        sessionStorage.setItem('busStopSearch', busStopCode);
-        fetchBusArrivals(); // Trigger the search
-    } else {
-        // Restore the search input value from sessionStorage if available
-        const savedSearch = sessionStorage.getItem('busStopSearch');
-        if (savedSearch) {
-            searchInput.value = savedSearch;
-            fetchBusArrivals(); // Fetch data for the saved search value
-        } else {
-            // Show "Enter Bus Stop Code" message if no value is present
-            tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code</td></tr>';
-            footer.style.display = 'block'; // Show footer even if no search is performed
-        }
-    }
-
-    // Update the URL with the current search input value
-    const url = new URL(window.location.href);
-    if (searchInput.value) {
-        url.searchParams.set('BusStopCode', searchInput.value);
-        if (description) {
-            url.searchParams.set('Description', description);
-        }
-        window.history.replaceState({}, document.title, url.toString());
-    }
-
-    // Add event listener for the search input to update the URL dynamically
-    searchInput.addEventListener('input', () => {
-        const currentValue = searchInput.value.trim();
-        if (currentValue) {
-            url.searchParams.set('BusStopCode', currentValue);
-            window.history.replaceState({}, document.title, url.toString());
-        }
-    });
-
-    // Remove query parameters when clicking the "Search Bus Stop" button
-    const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Select the button by id
-    if (searchBusStopButton) {
-        searchBusStopButton.addEventListener('click', (event) => {
-            event.preventDefault(); // Prevent default link behavior
-            searchInput.value = ''; // Clear the search bar
-            sessionStorage.removeItem('busStopSearch'); // Clear session storage
-            tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code</td></tr>'; // Reset table content
-
-            // Remove query parameters from the URL
-            url.searchParams.delete('BusStopCode');
-            url.searchParams.delete('Description');
-            window.history.replaceState({}, document.title, url.pathname);
-        });
-    }
-});
-
-        // Refresh data every 30 seconds
-        setInterval(fetchBusArrivals, 30000);
-
-        // Function to format ISO string to hh:mm and show "Arr" if the time matches the current time
-        function formatArrivalTime(isoString) {
-            const date = new Date(isoString);
-            const hours = date.getHours().toString().padStart(2, '0'); // Ensure 2-digit format
-            const minutes = date.getMinutes().toString().padStart(2, '0'); // Ensure 2-digit format
-            const formattedTime = `${hours}:${minutes}`;
-
-            // Get the current time in hh:mm format
-            const now = new Date();
-            const currentHours = now.getHours().toString().padStart(2, '0');
-            const currentMinutes = now.getMinutes().toString().padStart(2, '0');
-            const currentTime = `${currentHours}:${currentMinutes}`;
-
-            // Compare the times and return "Arr" if they match
-            if (formattedTime === currentTime) {
-                return `<span class="arrival-now">Arr</span>`;
-            }
-            return formattedTime;
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Select the button by id
-            const searchInput = document.getElementById('bus-stop-search'); // Select the search input field
-            const tableBody = document.querySelector('table tbody'); // Select the table body
-
-            if (searchBusStopButton && searchInput && tableBody) {
-                searchBusStopButton.addEventListener('click', (event) => {
-                    event.preventDefault(); // Prevent default link behavior
-                    searchInput.value = ''; // Clear the search bar
-                    sessionStorage.removeItem('busStopSearch'); // Clear session storage
-                    tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code</td></tr>'; // Reset table content
+            // Function to add click event listeners to bus stop codes
+            function addClickListeners() {
+                document.querySelectorAll('.bus-stop-code').forEach((element) => {
+                    element.addEventListener('click', (event) => {
+                        event.preventDefault(); // Prevent default link behavior
+                        const busStopCode = event.target.getAttribute('data-code');
+                        const description = event.target.getAttribute('data-description');
+                        // Navigate to bat.html with the bus stop code and description as query parameters
+                        window.location.href = `bat.html?BusStopCode=${encodeURIComponent(busStopCode)}&Description=${encodeURIComponent(description)}`;
+                    });
                 });
             }
+
+            // Function to update pagination controls
+            function updatePagination(currentSkip, itemsFetched) {
+                paginationContainer.innerHTML = ''; // Clear existing pagination controls
+
+                // Previous button
+                if (currentSkip > 0) {
+                    const prevButton = document.createElement('button');
+                    prevButton.className = 'btn btn-primary pagination-btn';
+                    prevButton.textContent = 'Previous';
+                    prevButton.addEventListener('click', () => {
+                        skip = Math.max(0, currentSkip - limit); // Decrement skip, ensuring it doesn't go below 0
+                        fetchBusStops(skip); // Fetch the previous set of bus stops
+                    });
+                    paginationContainer.appendChild(prevButton);
+                }
+
+                // Next button
+                if (itemsFetched === limit) {
+                    const nextButton = document.createElement('button');
+                    nextButton.className = 'btn btn-primary pagination-btn';
+                    nextButton.textContent = 'Next';
+                    nextButton.addEventListener('click', () => {
+                        skip = currentSkip + limit; // Increment skip
+                        fetchBusStops(skip); // Fetch the next set of bus stops
+                    });
+                    paginationContainer.appendChild(nextButton);
+                }
+            }
+
+            // Fetch the first set of bus stops on page load
+            await fetchBusStops(skip);
         });
-
-        // Debounce function
-        function debounce(func, delay) {
-            let timeout;
-            return function (...args) {
-                clearTimeout(timeout);
-                timeout = setTimeout(() => func.apply(this, args), delay);
-            };
-        }
-
-        // Attach debounce to the search input
-        const searchInput = document.getElementById('bus-stop-search');
-        searchInput.addEventListener('input', debounce(fetchBusArrivals, 300));
     </script>
 
 </body>
