Intro new All Bus Stops API

--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -418,7 +418,7 @@
                     const busStopCode = event.target.getAttribute('data-code');
                     const description = event.target.getAttribute('data-description');
                     // Navigate to bat.html with the bus stop code and description as query parameters
-                    window.location.href = `bat.html?BusStopCode=${encodeURIComponent(busStopCode)}&Description=${encodeURIComponent(description)}`;
+                    window.location.href = `bat.html?BusStopCode=${encodeURIComponent(busStopCode)}`;
                 });
             });
 
