--- a/bat/abs.html
+++ b/bat/abs.html
@@ -194,7 +194,7 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Search Bus Stop</h1>
+                                    <h1 class="page-title" id="filter-title">All Bus Stops</h1>
                                 </div>
                                 <div style="position: relative; max-width: 400px; margin-top: 5px;">
                                     <i class="fa-solid fa-search"
@@ -249,13 +249,15 @@
 
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
-        <div class="container">
-
-            <div class="list-group">
-                <p> Fetching Bus Stops List...</p>
-            </div>
-
+    <div class="container">
+        <div class="list-group">
+            <p>Fetching Bus Stops List...</p>
         </div>
+        <div class="pagination-buttons" style="text-align: center; margin-top: 20px;">
+            <button id="prev-button" class="btn btn-secondary" disabled>Previous</button>
+            <button id="next-button" class="btn btn-primary">Next</button>
+        </div>
+    </div>
     </section>
 
     <!-- Footer -->
@@ -310,29 +312,23 @@
     document.addEventListener('DOMContentLoaded', async () => {
         const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops'; // API URL
         const listGroup = document.querySelector('.list-group'); // Select the existing list-group container
-        const paginationContainer = document.createElement('div'); // Create a container for pagination
-        paginationContainer.className = 'pagination-container';
-        listGroup.parentNode.appendChild(paginationContainer); // Append pagination below the list group
-
         const searchInput = document.getElementById('bus-stop-search'); // Search input field
-        let skip = 0; // Start with the first 500 items
-        const limit = 500; // Number of items per page
+        const prevButton = document.getElementById('prev-button'); // Previous button
+        const nextButton = document.getElementById('next-button'); // Next button
+        const limit = 20; // Number of items per page
         let allBusStops = []; // Store all fetched bus stops for searching
-        let isFetchingAll = false; // Flag to indicate if all bus stops are being fetched
+        let currentPage = 1; // Current page number
+        let totalPages = 1; // Total number of pages
 
-        // Function to fetch bus stops
-        async function fetchBusStops(skip, fetchAll = false) {
-            try {
-                // If fetching all bus stops, reset the allBusStops array
-                if (fetchAll) {
-                    allBusStops = [];
-                    skip = 0;
-                }
+        // Function to fetch all bus stops in batches
+        async function fetchAllBusStops() {
+            let allBusStops = [];
+            let skip = 0;
+            const batchSize = 500; // Fetch in batches of 500 (or adjust based on API limits)
 
-                let hasMoreData = true;
-
-                while (hasMoreData) {
-                    const response = await fetch(`${apiUrl}?$skip=${skip}`, {
+            while (true) {
+                try {
+                    const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${batchSize}`, {
                         method: 'GET',
                         headers: {
                             accept: 'application/json',
@@ -344,42 +340,35 @@
                     }
 
                     const data = await response.json();
-
-                    // Append fetched bus stops to the allBusStops array
                     allBusStops = allBusStops.concat(data.value);
 
-                    // If fewer than 500 records are returned, we've reached the last page
-                    if (data.value.length < limit || !fetchAll) {
-                        hasMoreData = false;
-                    } else {
-                        skip += limit; // Increment skip for the next batch
+                    if (data.value.length < batchSize) {
+                        break; // Exit loop if fewer than `batchSize` items are returned
                     }
 
-                    // If not fetching all, display the current batch
-                    if (!fetchAll) {
-                        displayBusStops(data.value);
-                        updatePagination(skip, data.value.length);
-                        return;
-                    }
+                    skip += batchSize; // Increment skip for the next batch
+                } catch (error) {
+                    console.error('Error fetching bus stops:', error);
+                    break;
                 }
-
-                // If fetching all, display all bus stops
-                if (fetchAll) {
-                    displayBusStops(allBusStops);
-                }
-            } catch (error) {
-                console.error('Error fetching bus stops:', error);
-                listGroup.innerHTML = '<a href="#" class="list-group-item list-group-item-action">Error loading bus stops</a>';
             }
+
+            // Save the fetched bus stops to localStorage
+            localStorage.setItem('allBusStops', JSON.stringify(allBusStops));
+            return allBusStops;
         }
 
-        // Function to display bus stops
-        function displayBusStops(busStops) {
-            listGroup.innerHTML = ''; // Clear the list group
+        // Function to display bus stops for the current page
+        function displayBusStops(busStops, page) {
+            const startIndex = (page - 1) * limit;
+            const endIndex = startIndex + limit;
+            const paginatedBusStops = busStops.slice(startIndex, endIndex);
 
-            busStops.forEach((busStop) => {
+            // Clear the list group and display the bus stops
+            listGroup.innerHTML = '';
+            paginatedBusStops.forEach((busStop) => {
                 const listItem = document.createElement('a');
-                listItem.href = '#'; // Add a link if needed
+                listItem.href = `bat.html?busStopCode=${busStop.BusStopCode}`; // Navigate to bat.html with busStopCode as a query parameter
                 listItem.className = 'list-group-item list-group-item-action bus-stop-code';
                 listItem.setAttribute('data-code', busStop.BusStopCode); // Add bus stop code as a data attribute
                 listItem.setAttribute('data-description', busStop.Description); // Add description as a data attribute
@@ -387,63 +376,10 @@
                 listGroup.appendChild(listItem);
             });
 
-            // Add click event listeners to the dynamically created bus stop codes
-            addClickListeners();
+            // Update button states
+            prevButton.disabled = page === 1;
+            nextButton.disabled = page === totalPages;
         }
-
-        // Function to add click event listeners to bus stop codes
-        function addClickListeners() {
-            document.querySelectorAll('.bus-stop-code').forEach((element) => {
-                element.addEventListener('click', (event) => {
-                    event.preventDefault(); // Prevent default link behavior
-                    const busStopCode = event.target.getAttribute('data-code');
-                    const description = event.target.getAttribute('data-description');
-                    // Navigate to bat.html with the bus stop code and description as query parameters
-                    window.location.href = `bat.html?BusStopCode=${encodeURIComponent(busStopCode)}&Description=${encodeURIComponent(description)}`;
-                });
-            });
-        }
-
-        // Function to update pagination controls
-function updatePagination(currentSkip, itemsFetched, totalRecords) {
-    paginationContainer.innerHTML = ''; // Clear existing pagination controls
-
-    // Previous button
-    if (currentSkip > 0) {
-        const prevButton = document.createElement('button');
-        prevButton.className = 'btn btn-primary pagination-btn';
-        prevButton.textContent = 'Previous';
-        prevButton.addEventListener('click', () => {
-            skip = Math.max(0, currentSkip - limit); // Decrement skip, ensuring it doesn't go below 0
-            fetchBusStops(skip); // Fetch the previous set of bus stops
-        });
-        paginationContainer.appendChild(prevButton);
-    }
-
-    // Next button
-    if (itemsFetched === limit) {
-        const nextButton = document.createElement('button');
-        nextButton.className = 'btn btn-primary pagination-btn';
-        nextButton.textContent = 'Next';
-        nextButton.addEventListener('click', () => {
-            skip = currentSkip + limit; // Increment skip
-            fetchBusStops(skip); // Fetch the next set of bus stops
-        });
-        paginationContainer.appendChild(nextButton);
-    }
-
-    // Last button (optional)
-    if (totalRecords && currentSkip + itemsFetched < totalRecords) {
-        const lastButton = document.createElement('button');
-        lastButton.className = 'btn btn-primary pagination-btn';
-        lastButton.textContent = 'Last';
-        lastButton.addEventListener('click', () => {
-            skip = Math.floor(totalRecords / limit) * limit; // Calculate the skip for the last page
-            fetchBusStops(skip); // Fetch the last set of bus stops
-        });
-        paginationContainer.appendChild(lastButton);
-    }
-}
 
         // Function to filter bus stops based on search input
         function filterBusStops(query) {
@@ -453,26 +389,44 @@ function updatePagination(currentSkip, itemsFetched, totalRecords) {
                 return busStopCode.includes(query) || description.includes(query);
             });
 
-            // Display the filtered bus stops
-            displayBusStops(filteredBusStops);
+            totalPages = Math.ceil(filteredBusStops.length / limit);
+            currentPage = 1; // Reset to the first page
+            displayBusStops(filteredBusStops, currentPage);
         }
 
         // Add event listener to the search input
-        searchInput.addEventListener('input', async (event) => {
+        searchInput.addEventListener('input', (event) => {
             const query = event.target.value.toLowerCase(); // Get the search query in lowercase
-
-            // If the user starts typing, fetch all bus stops if not already fetched
-            if (query && !isFetchingAll) {
-                isFetchingAll = true;
-                await fetchBusStops(0, true); // Fetch all bus stops
-            }
-
-            // Filter the bus stops based on the search query
-            filterBusStops(query);
+            filterBusStops(query); // Filter the bus stops based on the search query
         });
 
-        // Fetch the first set of bus stops on page load
-        await fetchBusStops(skip);
+        // Add event listeners to pagination buttons
+        prevButton.addEventListener('click', () => {
+            if (currentPage > 1) {
+                currentPage--;
+                displayBusStops(allBusStops, currentPage);
+            }
+        });
+
+        nextButton.addEventListener('click', () => {
+            if (currentPage < totalPages) {
+                currentPage++;
+                displayBusStops(allBusStops, currentPage);
+            }
+        });
+
+        // Load bus stops from localStorage or fetch from API
+        const cachedBusStops = localStorage.getItem('allBusStops');
+        if (cachedBusStops) {
+            console.log('Loading bus stops from localStorage...');
+            allBusStops = JSON.parse(cachedBusStops);
+        } else {
+            console.log('Fetching all bus stops...');
+            allBusStops = await fetchAllBusStops();
+        }
+
+        totalPages = Math.ceil(allBusStops.length / limit); // Calculate total pages
+        displayBusStops(allBusStops, currentPage); // Display the first page
     });
 </script>
 
